--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scipts\Platform.cs" />
+    <Compile Include="Assets\Scipts\GameManager.cs" />
     <Compile Include="Assets\Scipts\WeakPlatform.cs" />
     <Compile Include="Assets\Scipts\PlayerMovement.cs" />
     <Compile Include="Assets\Scipts\CameraMovement.cs" />
